--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -17,3 +17,5 @@
 	templatedir = ~/.git_template
 [alias]
 	ctags = !.git/hooks/ctags
+	reset-author = commit --amend --reset-author --no-edit
+	undeployed = !git l `git tag|grep production|tail -n 1`..HEAD
