Add the generated appearance from running tmuxline

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -46,3 +46,6 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Reload .tmux.conf with "r".
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Load our appearance file.
+if-shell "test -f ~/.tmux_appearance" "source ~/.tmux_appearance"
