Shortcut to move window to another index

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -34,6 +34,9 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Shortcut to move window to another index.
+bind -r m command-prompt "move-window -t %%"
+
 bind escape copy-mode
 
 # Setup 'v' to begin selection as in Vim.
