--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -43,6 +43,9 @@ bind escape copy-mode
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
+# Fix pbcopy
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
 # Update default binding of `Enter` to also use copy-pipe.
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
