Don't ask for confirmation when closing panes.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -18,6 +18,9 @@ set -g status-keys vi
 # 256-color mode.
 set -g default-terminal "screen-256color"
 
+# Don't ask for confirmation when closing panes.
+bind-key x kill-pane
+
 # Use vim terminology for splitting panes.
 bind v split-window -h
 bind s split-window -v
