Number tmux windows from 0

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -6,9 +6,9 @@ set -g history-limit 10000
 # Change the default input delay in order to improve Vim performance.
 set -sg escape-time 1
 
-# Number windows and panes starting at 1 so that we can jump to them easier.
-set -g base-index 1
-set -g pane-base-index 1
+# Number windows and panes starting at 0
+set -g base-index 0
+set -g pane-base-index 0
 set -g renumber-windows on
 
 # vi mode.
