--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -19,3 +19,6 @@
 	ctags = !.git/hooks/ctags
 	reset-author = commit --amend --reset-author --no-edit
 	undeployed = !git l `git tag|grep production|tail -n 1`..HEAD
+[merge "gemfilelock"]
+	name = relocks the gemfile.lock
+	driver = bundle install
