--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -21,9 +21,10 @@ set -g default-terminal "screen-256color"
 # Don't ask for confirmation when closing panes.
 bind-key x kill-pane
 
-# Use vim terminology for splitting panes.
-bind v split-window -h
-bind s split-window -v
+# Open new panes in same path.
+bind s split-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Select panes with vi-style movement commands.
 bind h select-pane -L
