--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -41,6 +41,9 @@ bind -r L resize-pane -R 5
 # Shortcut to move window to another index.
 bind -r m command-prompt "move-window -t %%"
 
+# Shortcut to go to next session.
+bind-key Tab switch-client -n
+
 bind escape copy-mode
 
 # Setup 'v' to begin selection as in Vim.
