--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -19,6 +19,7 @@
 	ctags = !.git/hooks/ctags
 	reset-author = commit --amend --reset-author --no-edit
 	undeployed = !git l `git tag|grep production|tail -n 1`..HEAD
+	reset-hooks = !rm .git/hooks/* & git init
 [merge "gemfilelock"]
 	name = relocks the gemfile.lock
 	driver = bundle install
