--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Zoee Silcock
-	email = zoee.silcock@mynewsdesk.com
+	email = mrzoee@gmail.com
 [push]
 	default = current
 [merge]
@@ -19,6 +19,8 @@
 	ctags = !.git/hooks/ctags
 	reset-author = commit --amend --reset-author --no-edit
 	undeployed = !git l `git tag|grep production|tail -n 1`..HEAD
+	personal = config user.email \"mrzoee@gmail.com\"
+	work = config user.email \"zoee.silcock@mynewsdesk.com\"
 	reset-hooks = !rm .git/hooks/* & git init
 [merge "gemfilelock"]
 	name = relocks the gemfile.lock
