Try out fish shell

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -62,3 +62,5 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Load our appearance file.
 if-shell "test -f ~/.tmux_appearance" "source ~/.tmux_appearance"
+
+set-option -g default-command "reattach-to-user-namespace -l fish"
