--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -63,4 +63,4 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # Load our appearance file.
 if-shell "test -f ~/.tmux_appearance" "source ~/.tmux_appearance"
 
-set-option -g default-command "reattach-to-user-namespace -l fish"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
