Add a couple of modules to zprezto

--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -34,7 +34,9 @@ zstyle ':prezto:load' pmodule \
   'completion' \
   'prompt' \
   'tmux' \
-  'ruby'
+  'ruby' \
+  'history' \
+  'history-substring-search'
 
 #
 # Editor
