--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,7 @@
 	url = https://github.com/sorin-ionescu/prezto.git
 [submodule "home/zsh-git-prompt"]
 	path = home/zsh-git-prompt
-	url = git@github.com:olivierverdier/zsh-git-prompt.git
+	url = https://github.com/olivierverdier/zsh-git-prompt.git
+[submodule "home/base16-shell"]
+	path = home/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
