--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -50,17 +50,11 @@ bind escape copy-mode
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Fix pbcopy
-set-option -g default-command "reattach-to-user-namespace -l bash"
-
-# Update default binding of `Enter` to also use copy-pipe.
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
 # Reload .tmux.conf with "r".
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Load our appearance file.
 if-shell "test -f ~/.tmux_appearance" "source ~/.tmux_appearance"
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# OSX specific stuff.
+if-shell "uname | grep -q Darwin" "source-file .tmux-mac.conf"
