Enable mouse mode in tmux for scrolling

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -18,6 +18,9 @@ set -g status-keys vi
 # 256-color mode.
 set -g default-terminal "screen-256color"
 
+# Enable mouse
+set -g mode-mouse on
+
 # Don't ask for confirmation when closing panes.
 bind-key x kill-pane
 
