Update the tmux config for newer versions of tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -19,7 +19,7 @@ set -g status-keys vi
 set -g default-terminal "screen-256color"
 
 # Enable mouse
-set -g mode-mouse on
+set -g mouse on
 
 # Don't ask for confirmation when closing panes.
 bind-key x kill-pane
@@ -50,14 +50,11 @@ bind-key Tab switch-client -n
 bind escape copy-mode
 
 # Setup 'v' to begin selection as in Vim.
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
 # Reload .tmux.conf with "r".
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Load our appearance file.
 if-shell "test -f ~/.tmux_appearance" "source ~/.tmux_appearance"
-
-# OSX specific stuff.
-if-shell "uname | grep -q Darwin" "source-file .tmux-mac.conf"
