Add a shortcut for clearing a shell in tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -27,3 +27,6 @@ bind -r L resize-pane -R 5
 
 # Reload .tmux.conf with "r".
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Clear the screen and history.
+bind-key -n C-k send-keys C-l \; send-keys -R \; clear-history
