--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -12,7 +12,7 @@
 [core]
 	edit = vim
 	fileMode = false
-	editor = vim
+	editor = nvim
 	excludesfile = ~/.gitignore_global
 	autocrlf = false
 [init]
