Make tmux work better with neovim

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,6 +8,10 @@ set -g default-terminal "screen-256color"
 # Enable mouse
 set -g mouse on
 
+# Make tmux work better with neovim.
+set-option -sg escape-time 10
+set-option -g focus-events on
+
 # Open new panes in same path.
 bind s split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
