--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,6 +8,9 @@ set -g default-terminal "screen-256color"
 # Enable mouse
 set -g mouse on
 
+# Use vi keybindings
+set-window-option mode-keys vi
+
 # Make tmux work better with neovim.
 set-option -sg escape-time 10
 set-option -g focus-events on
