Fix an error when launching tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,7 +9,7 @@ set -g default-terminal "screen-256color"
 set -g mouse on
 
 # Use vi keybindings
-set-window-option mode-keys vi
+setw -g mode-keys vi
 
 # Make tmux work better with neovim.
 set-option -sg escape-time 10
