--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -4,6 +4,7 @@ set -g prefix C-a
 
 # 256-color mode.
 set -g default-terminal "screen-256color"
+set -as terminal-overrides ",xterm*:Tc"
 
 # Enable mouse
 set -g mouse on
