--- a/home/.config/alacritty/alacritty.toml
+++ b/home/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["catppuccin-mocha.toml"]
+import = ["/Users/zoee/.config/alacritty/catppuccin-mocha.toml"]
 
 working_directory = "/Users/zoee/Developer"
 
