Update alacritty config to support version 0.14

--- a/home/.config/alacritty/alacritty.toml
+++ b/home/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
+[general]
 import = ["/Users/zoee/.config/alacritty/catppuccin-mocha.toml"]
-
 working_directory = "/Users/zoee/Developer"
 
 [font]
