--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -27,8 +27,7 @@ monitor=,preferred,auto,2
 # Set programs that you use
 $terminal = ghostty
 $fileManager = dolphin
-$menu = wofi --show drun
-
+$menu = rofi -show drun
 
 #################
 ### AUTOSTART ###
@@ -88,7 +87,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -96,7 +95,7 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
 
@@ -106,7 +105,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = no, please :)
+    enabled = no, thanks :)
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -143,6 +142,7 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrulev2 = noborder, onworkspace:w[t1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -159,6 +159,7 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    vfr = true
 }
 
 
@@ -215,11 +216,17 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+# bindt = , Super_L, exec, pkill -SIGUSR1 waybar
+# bindrt = SUPER, Super_L, exec, pkill -SIGUSR1 waybar
+bindit = $mainMod, SUPER_L, exec, pkill -SIGUSR1 waybar
+bindirt = $mainMod, SUPER_L, exec, pkill -SIGUSR1 waybar
+bind = $mainMod, B, exec, pkill -SIGUSR1 waybar
+
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, l, movefocus, l
+bind = $mainMod, h, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = CTRL, 1, workspace, 1
