Don't use a login shell for tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -16,6 +16,9 @@ setw -g mode-keys vi
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+# Don't use a login shell.
+set -g default-command "${SHELL}"
+
 # Open new panes in same path.
 bind s split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
