Customize hyprland config

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -15,8 +15,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,2
-
+monitor=,preferred,auto,1
 
 ###################
 ### MY PROGRAMS ###
@@ -39,7 +38,11 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+env = DBUS_SESSION_BUS_ADDRESS,unix:path=/run/user/1000/bus
+env = DISPLAY,:0
+exec-once = dropbox
 exec-once = waybar
+exec-once = mako
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -144,6 +147,11 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 windowrulev2 = noborder, onworkspace:w[t1]
 
+# Rules for PiP windows
+windowrulev2 = pin, title:^(Picture in picture)$
+windowrulev2 = float, title:^(Picture in picture)$
+windowrulev2 = move 2294 0, title:^(Picture in picture)$
+windowrulev2 = size 1146 680, title:^(Picture in picture)$
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -175,11 +183,14 @@ input {
     kb_options = ctrl:nocaps
     kb_rules =
 
+    repeat_delay = 250
+    repeat_rate = 50
+
     follow_mouse = 1
 
     sensitivity = 0.75 # -1.0 - 1.0, 0 means no modification.
 
-    natural_scroll = false
+    natural_scroll = true
 
     touchpad {
         natural_scroll = true
@@ -207,20 +218,19 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, R, exec, $terminal
+bind = $mainMod, Q, killactive,
+bind = $mainMod ALT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, space, exec, $menu
+# bind = $mainMod ALT, V, togglefloating
+# bind = $mainMod ALT, V, pin
+bind = ALT, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-# bindt = , Super_L, exec, pkill -SIGUSR1 waybar
-# bindrt = SUPER, Super_L, exec, pkill -SIGUSR1 waybar
-bindit = $mainMod, SUPER_L, exec, pkill -SIGUSR1 waybar
-bindirt = $mainMod, SUPER_L, exec, pkill -SIGUSR1 waybar
 bind = $mainMod, B, exec, pkill -SIGUSR1 waybar
+bind = $mainMod ALT, B, exec, pkill waybar && hyprctl dispatch exec waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
