Some general changes to the hyprland config

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ monitor=,preferred,auto,1
 
 # Set programs that you use
 $terminal = ghostty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun
 
 #################
@@ -42,7 +42,7 @@ env = DBUS_SESSION_BUS_ADDRESS,unix:path=/run/user/1000/bus
 env = DISPLAY,:0
 exec-once = dropbox
 exec-once = waybar
-exec-once = mako
+exec-once = mako # for notifications
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -52,6 +52,12 @@ exec-once = mako
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+# Dark mode
+env = GTK_THEME, Adwaita:dark
+env = QT_QPA_PLATFORMTHEME, qt6ct # for QT apps
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"   # for GTK3 apps
+exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 
 
 #####################
