--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -37,11 +37,12 @@
         "custom/left_div#2",
         "pulseaudio",
         "bluetooth",
+        "idle_inhibitor",
         "custom/left_inv#2",
         // "backlight",
         // "battery",
         "custom/left_div#3",
-        "idle_inhibitor",
+        "tray",
         "custom/left_inv#3",
         "custom/power"
     ],
@@ -149,6 +150,14 @@
       "tooltip-format-connected": "Status: {status}\n\n{controller_alias}\t{controller_address}\n\n{device_enumerate}",
       "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
       "on-click": "blueman-manager"
+    },
+    "tray": {
+      "icon-size": 18,
+      "spacing": 15,
+      "icons": {
+        "blueman": "bluetooth",
+        "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
+      }
     },
     "custom/power": {
         "format" : "⏻",
