Various fixes and improvements to Arch config

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -74,6 +74,7 @@ general {
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+    # TODO: Use catpuccin colors here.
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
@@ -156,8 +157,9 @@ windowrulev2 = noborder, onworkspace:w[t1]
 # Rules for PiP windows
 windowrulev2 = pin, title:^(Picture in picture)$
 windowrulev2 = float, title:^(Picture in picture)$
-windowrulev2 = move 2294 0, title:^(Picture in picture)$
-windowrulev2 = size 1146 680, title:^(Picture in picture)$
+windowrulev2 = move 2293 34, title:^(Picture in picture)$
+windowrulev2 = size 1146 680, title:^(picture in picture)$
+
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -278,6 +280,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Reset PiP window with mainMod + RMB
+bindc = $mainMod, mouse:273, resizewindowpixel, exact 1146 680,^(picture in picture)$
+bindc = $mainMod, mouse:273, movewindowpixel, exact 2293 34,^(picture in picture)$
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
