Fix a couple of window rules

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -165,13 +165,19 @@ animations {
 #     border_size = 0
 #     rounding = 0
 # }
-windowrulev2 = noborder, onworkspace:w[t1]
+
+# No border when there is only one window on a workspace.
+windowrule = border_size 0, match:workspace w[t1]
 
 # Rules for PiP windows
-windowrulev2 = pin, title:^(Picture in picture)$
-windowrulev2 = float, title:^(Picture in picture)$
-windowrulev2 = move 2293 34, title:^(Picture in picture)$
-windowrulev2 = size 1146 680, title:^(picture in picture)$
+windowrule {
+  name = pip-windows
+  match:title = ^(Picture in picture)$
+  pin = on
+  float = on
+  move = 2293 34
+  size = 1146 680
+}
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
