Some general fixes for linux

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -44,6 +44,9 @@ exec-once = dropbox
 exec-once = waybar
 exec-once = mako # for notifications
 
+# Fix keyboard issues with accent keys.
+env = GTK_IM_MODULE,gtk-im-context-simple
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -253,6 +256,7 @@ bind = $mainMod, V, togglefloating,
 bind = ALT, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = ALT, Return, fullscreen
 
 bind = $mainMod, B, exec, pkill -SIGUSR1 waybar
 bind = $mainMod ALT, B, exec, pkill waybar && hyprctl dispatch exec waybar
@@ -304,7 +308,8 @@ bindc = $mainMod, mouse:273, resizewindowpixel, exact 1146 680,^(picture in pict
 bindc = $mainMod, mouse:273, movewindowpixel, exact 2293 34,^(picture in picture)$
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+# bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioRaiseVolume, exec, playerctl play-pause
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
