--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -13,7 +13,10 @@
 exec --no-startup-id setxkbmap -layout se -option ctrl:nocaps
 exec --no-startup-id xset r rate 200 35
 
-for_window [class="looking-glass-client"] floating enable, move container to workspace "4"
+for_window [class="looking-glass-client"] border pixel 0, move container to workspace "4", resize set 3440 1440, move absolute position center
+for_window [title="Picture in picture"] resize set 1146 680, move position 2293 0
+
+bindsym $mod+Shift+b bar mode toggle
 
 set $mod Mod1
 
@@ -42,7 +45,8 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec playerctl play-pause
+# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
